AvaTax4ServiceMax/src/objects/SM_Request_Cache__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Internal object used to improve sync performance by caching frequently used information. This is also used to recover the sync state when client connections get dropped.</description>
    <fields>
        <fullName>SM_Application_Filters__c</fullName>
        <label>Application Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Application_Version__c</fullName>
        <label>Application Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Checklist_Wizard_Objects__c</fullName>
        <label>Checklist Wizard Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Client_Sync_Request_Id__c</fullName>
        <label>Client Sync Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Device_Type__c</fullName>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Device_UDID__c</fullName>
        <label>Device UDID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Doc_Template_IDs__c</fullName>
        <label>Doc Template IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Download_Criteria_Object_Definitions__c</fullName>
        <label>Download Criteria Object Definitions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Download_Criteria_Object_List__c</fullName>
        <label>Download Criteria Object List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Expression_IDs__c</fullName>
        <label>Expression IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Group_Profile_Id__c</fullName>
        <label>Group Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Mobile_Config_Settings__c</fullName>
        <label>Mobile Config Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Object_Access__c</fullName>
        <label>Object Access</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Object_Definitions__c</fullName>
        <label>Object Definitions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Page_Layout_IDs__c</fullName>
        <label>Page Layout IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Picklist_Definitions__c</fullName>
        <label>Picklist Definitions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SFM_Mappings__c</fullName>
        <label>SFM Mappings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SFM_Process_IDs__c</fullName>
        <label>SFM Process IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SFM_Translations__c</fullName>
        <label>SFM Translations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SFM_Wizard_SFM_Ids__c</fullName>
        <label>SFM Wizard SFM Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SFW_Translations__c</fullName>
        <label>SFW Translations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Sync_Start_Time__c</fullName>
        <label>Sync Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SM_User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Request_Cache</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Cache</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Request Cache Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>